--- a/ProjectAveryFrontend.csproj
+++ b/ProjectAveryFrontend.csproj
@@ -1,14 +1,27 @@
 <Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net6.0</TargetFramework>
+        <Nullable>enable</Nullable>
+        <ImplicitUsings>enable</ImplicitUsings>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.0-rc.2.21480.10" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.0-rc.2.21480.10" PrivateAssets="all" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.0-rc.2.21480.10" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.0-rc.2.21480.10" PrivateAssets="all" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <_ContentIncludedByDefault Remove="Pages-old\Counter.razor" />
+        <_ContentIncludedByDefault Remove="Pages-old\FetchData.razor" />
+        <_ContentIncludedByDefault Remove="Pages-old\Index.razor" />
+        <_ContentIncludedByDefault Remove="Shared-old\MainLayout.razor" />
+        <_ContentIncludedByDefault Remove="Shared-old\NavMenu.razor" />
+        <_ContentIncludedByDefault Remove="Shared-old\SurveyPrompt.razor" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <Folder Include="Logic\Utility" />
+    </ItemGroup>
 
 </Project>
