--- a/ProjectAveryFrontend.csproj
+++ b/ProjectAveryFrontend.csproj
@@ -7,27 +7,31 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.0-rc.2.21480.10"/>
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.0-rc.2.21480.10" PrivateAssets="all"/>
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.0-rc.2.21480.10" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.0-rc.2.21480.10" PrivateAssets="all" />
     </ItemGroup>
 
     <ItemGroup>
-        <_ContentIncludedByDefault Remove="Pages-old\Counter.razor"/>
-        <_ContentIncludedByDefault Remove="Pages-old\FetchData.razor"/>
-        <_ContentIncludedByDefault Remove="Pages-old\Index.razor"/>
-        <_ContentIncludedByDefault Remove="Shared-old\MainLayout.razor"/>
-        <_ContentIncludedByDefault Remove="Shared-old\NavMenu.razor"/>
-        <_ContentIncludedByDefault Remove="Shared-old\SurveyPrompt.razor"/>
+        <_ContentIncludedByDefault Remove="Pages-old\Counter.razor" />
+        <_ContentIncludedByDefault Remove="Pages-old\FetchData.razor" />
+        <_ContentIncludedByDefault Remove="Pages-old\Index.razor" />
+        <_ContentIncludedByDefault Remove="Shared-old\MainLayout.razor" />
+        <_ContentIncludedByDefault Remove="Shared-old\NavMenu.razor" />
+        <_ContentIncludedByDefault Remove="Shared-old\SurveyPrompt.razor" />
     </ItemGroup>
 
     <ItemGroup>
-        <Folder Include="Logic\Utility"/>
+        <Folder Include="Logic\Utility" />
     </ItemGroup>
 
     <ItemGroup>
-        <None Include="wwwroot\css\colors.css"/>
-        <None Include="wwwroot\css\colors.css.map"/>
-        <None Include="wwwroot\css\colors.scss"/>
+        <None Include="wwwroot\css\colors.css" />
+        <None Include="wwwroot\css\colors.css.map" />
+        <None Include="wwwroot\css\colors.scss" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\ProjectAveryCommon\ProjectAveryCommon.csproj" />
     </ItemGroup>
 
 </Project>
