--- a/ForkFrontend.csproj
+++ b/ForkFrontend.csproj
@@ -22,7 +22,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\ProjectAveryCommon\ProjectAveryCommon.csproj" />
+        <ProjectReference Include="..\ForkCommon\ForkCommon.csproj" />
     </ItemGroup>
 
     <ItemGroup>
