--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "projectaveryfrontend",
+  "name": "Forkfrontend",
   "version": "1.0.0",
   "description": "",
   "dependencies": {
@@ -15,12 +15,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ForkGG/ProjectAveryFrontend.git"
+    "url": "git+https://github.com/ForkGG/ForkFrontend.git"
   },
   "author": "",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ForkGG/ProjectAveryFrontend/issues"
+    "url": "https://github.com/ForkGG/ForkFrontend/issues"
   },
-  "homepage": "https://github.com/ForkGG/ProjectAveryFrontend#readme"
+  "homepage": "https://github.com/ForkGG/ForkFrontend#readme"
 }
