#24 created the Create-Server-Page
- Implemented some Fork Inputs
- Finished styling of Create-Server-Page

--- a/ForkFrontend.csproj
+++ b/ForkFrontend.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net6.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <RunPostBuildEvent>Always</RunPostBuildEvent>
     </PropertyGroup>
 
     <ItemGroup>
@@ -30,9 +31,5 @@
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </Content>
     </ItemGroup>
-
-    <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-      <Exec Command="npm run buildcss" />
-    </Target>
 
 </Project>
