--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "dependencies": {
     "autoprefixer": "^10.4.0",
+    "chokidar-cli": "^3.0.0",
     "cssnano": "^5.0.14",
     "node": "^14.18.2",
     "postcss": "^8.4.4",
@@ -12,8 +13,9 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "buildcss": "set TAILWIND_MODE=watch && postcss wwwroot/css/app.css -o wwwroot/css/app.min.css -w --verbose",
-    "tw": "npx tailwindcss -i wwwroot/css/app.css -o wwwroot/css/app.min.css --watch"
+    "buildcss": "postcss wwwroot/css/app.css -o wwwroot/css/app.min.css --verbose",
+    "watch": "chokidar \"**/*.razor\" \"wwwroot/css/app.css\" -c \"npm run tw\"",
+    "tw": "npx tailwindcss -i wwwroot/css/app.css -o wwwroot/css/app.min.css"
   },
   "repository": {
     "type": "git",
